--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "twilio": "^4.14.1",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "web-push": "^3.6.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
