--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "node": "16"
     },
     "dependencies": {
+        "@mapbox/mapbox-sdk": "^0.15.3",
         "@sendgrid/mail": "^7.7.0",
         "bcryptjs": "^2.4.3",
         "cloudinary": "^1.39.0",
@@ -27,6 +28,7 @@
         "http-status-codes": "^2.2.0",
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.4.0",
+        "node-fetch": "^3.3.2",
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
         "twilio": "^4.14.1",
