--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.15.3",
     "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.39.0",
     "connect-mongo": "^5.0.0",
@@ -32,6 +33,7 @@
     "node-fetch": "^2.6.12",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "request": "^2.88.2",
     "twilio": "^4.14.1",
     "validator": "^13.9.0",
     "web-push": "^3.6.4"
