--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.0",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.12",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
