--- a/package.json
+++ b/package.json
@@ -1,11 +1,45 @@
 {
-  "name": "car-poolingg",
-  "version": "1.0.0",
-  "description": "Car-Pooling app backend for OAUSWEP200 project 2021/2022",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "car-poolingg",
+    "version": "1.0.0",
+    "description": "Car-Pooling app backend for OAUSWEP200 project 2021/2022",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js",
+        "dev": "nodemon app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "engines": {
+        "node": "18.x || 16.x"
+    },
+    "dependencies": {
+        "@mapbox/mapbox-sdk": "^0.15.3",
+        "@sendgrid/mail": "^7.7.0",
+        "axios": "^1.4.0",
+        "bcryptjs": "^2.4.3",
+        "cloudinary": "^1.39.0",
+        "connect-mongo": "^5.0.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
+        "express-fileupload": "^1.4.0",
+        "express-formidable-v2": "^2.2.1",
+        "express-session": "^1.17.3",
+        "http-status-codes": "^2.2.0",
+        "jsonwebtoken": "^9.0.1",
+        "mongoose": "^7.4.0",
+        "multer": "^1.4.5-lts.1",
+        "node-fetch": "^2.6.12",
+        "passport": "^0.6.0",
+        "passport-google-oauth20": "^2.0.0",
+        "request": "^2.88.2",
+        "twilio": "^4.14.1",
+        "validator": "^13.9.0",
+        "web-push": "^3.6.4"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
+    }
 }
