--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "author": "",
     "license": "ISC",
     "engines": {
-        "node": "18.x || 16.x"
+        "node": "16.x"
     },
     "dependencies": {
         "@mapbox/mapbox-sdk": "^0.15.3",
