--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
         "cloudinary": "^1.39.0",
         "connect-mongo": "^5.0.0",
         "cors": "^2.8.5",
+        "csv-express": "^1.2.2",
+        "csvtojson": "^2.0.10",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
-        "express-fileupload": "^1.4.0",
         "express-formidable-v2": "^2.2.1",
         "express-session": "^1.17.3",
         "http-status-codes": "^2.2.0",
+        "json2csv": "^6.0.0-alpha.2",
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^6.10.0",
         "multer": "^1.4.5-lts.1",
